<resources>
    <string name="app_name">DolarPy</string>
    <string name="titleAPP" translatable="false">💸 DolarPy 💸</string>
    <string name="lastUpdate">Actualizado: </string>
    <string name="dolarBuy">Compra:</string>
    <string name="dolarSell">Venta:</string>
    <string name="dolarRef">Ref Día:</string>
    <string name="btnAccept">Aceptar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="hintAmount">Monto</string>
    <string name="navCotizacion">Cotizaciones</string>
    <string name="navInfo">Info</string>
    <string name="navUbicacion">Ubicaciones</string>
    <string name="textLicense" translatable="false">Apache-2.0 License</string>
    <string name="textInform">Informa un Error/Bug</string>
    <string name="textHelpCode">Contribuir al código</string>
    <string name="btnSend">Enviar</string>
    <string name="textMessage">Mensaje</string>
    <string name="textGitHub" translatable="false">GitHub</string>
    <string name="textError">Por Favor complete el campo</string>
    <string name="textSateNormal" translatable="false">Normal</string>
    <string name="textSate">Satélite</string>
    <string name="textErrorNet">Sin conexión compruebe su conexión</string>
    <string name="tryConnect">Reintentar conexión</string>
    <string name="tvSaveText">Ultimas cotizaciones guardadas</string>
    <string name="tvUpdateSave">Último guardado:</string>
    <string name="tvVersion">Versión: </string>
    <string name="initMaps">Compruebe su servicio de Maps</string>
    <string name="tvTitleTwitter">Sigue al bot para recibir las ultimas cotizaciones</string>
    <string name="tvLenguaje">Idioma:</string>
    <string name="tvModeDark">Modo Oscuro:</string>
    <string name="tvTitleConfig">🛠️Configuraciónes</string>
    <string name="dialogLanguage">Si cambia el idioma, la pantalla se actualizará</string>
    <string name="dialogMode">Si cambia el modo se reiniciara la app</string>
    <string name="textErrorAll">Se produjo un error intente de nuevo</string>
    <string name="dolarBuyTitle">Compra</string>
    <string name="dolarSellTitle">Venta</string>
    <string name="tvOrder">Ordenar por: </string>
    <string name="tvmore">Mayor</string>
    <string name="tvless">Menor</string>
</resources>