<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragments.ubicacionFragment">


    <ImageView
        android:id="@+id/ivIcon2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_nav_item"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primaryColor" />

    <TextView
        android:id="@+id/tvInfoTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navUbicacion"
        android:textColor="@color/primaryColor"
        android:textColorHighlight="@color/primaryColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/ivIcon2" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/nav_background"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoTitle2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_primary_color"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/toggle"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapViewF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/toggle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checkedButton="@+id/normal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6">

        <RadioButton
            android:id="@+id/satellite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_right_corner"
            android:button="@null"
            android:gravity="center"
            android:text="@string/textSate"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_left_corner"
            android:button="@null"
            android:gravity="center"
            android:text="@string/textSateNormal"
            android:textColor="@color/white" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>